--- a/Guru99_Selenium/pom.xml
+++ b/Guru99_Selenium/pom.xml
@@ -33,12 +33,13 @@
     <version>7.0.0</version>
     <scope>test</scope>
 </dependency>
-<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
 <dependency>
     <groupId>org.apache.poi</groupId>
-    <artifactId>poi</artifactId>
+    <artifactId>poi-ooxml</artifactId>
     <version>4.1.1</version>
 </dependency>
+
 
     <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
 <dependency>
